style: overflow fixes

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -45,11 +45,7 @@ html {
 // responsive to mobile
 @media only screen and (max-width: $mobile) {
   .overlay .close-outside {
-    visibility: hidden;
-    z-index: -25;
-    height: 102px;
-    width: 100vw;
-    top: 0;
+    display: none;
   }
 }
 
@@ -76,14 +72,17 @@ html {
 
 body {
   background-image: url('./../../public/assets/wooden-bg.jpg');
-  width: 100vw;
+  max-width: 100vw;
+  max-height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 
   #mobile-menu-aside {
     display: none !important;
   }
 
   &.landing {
-    overflow: clip;
+    overflow: hidden;
     height: 100vh;
   }
 
@@ -129,7 +128,11 @@ body {
     // responsive to mobile
     @media only screen and (max-width: $mobile) {
       &.aside-open {
-        overflow: hidden;
+        overflow-x: hidden;
+
+        footer {
+          display: none;
+        }
       }
     }
   }
@@ -190,9 +193,8 @@ aside {
   }
 
   main {
-    height: calc(100vh - 75px);
+    height: 100%;
     background-color: rgba($less-light, 0.25);
-    padding: 15px 0;
 
     hr {
       height: 4px;
