--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -3,7 +3,6 @@ body {
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 h1,
